test/errors/for1.rcasm

    ldi a,1
!for i in range(2,4) {
    ldi a,ixx
}
